--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@types/react-dom": "^18",
     "@types/three": "^0.170.0",
     "astro": "^5.0.3",
+    "r3f-perf": "^7.2.3",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.171.0"
   }
 }
-
