--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@astrojs/react": "^3",
+    "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.120.1",
     "@react-three/fiber": "^8.17.10",
     "@react-three/rapier": "^1.5.0",
