--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@astrojs/react": "^3",
-    "@react-spring/three": "^9.7.5",
+    "@astrojs/tailwind": "^5.1.3",
     "@react-three/drei": "^9.120.1",
     "@react-three/fiber": "^8.17.10",
     "@react-three/rapier": "^1.5.0",
@@ -19,9 +19,13 @@
     "@types/three": "^0.170.0",
     "@use-gesture/react": "^10.3.1",
     "astro": "^5.0.3",
+    "astro-compress": "^2.3.5",
     "r3f-perf": "^7.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "three": "^0.171.0"
+    "tailwindcss": "^3.4.16",
+    "three": "^0.171.0",
+    "three-stdlib": "^2.35.2",
+    "zustand": "^5.0.2"
   }
 }
