--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18",
     "@types/three": "^0.170.0",
     "@use-gesture/react": "^10.3.1",
+    "@vercel/analytics": "^1.4.1",
     "astro": "^5.0.3",
     "astro-compress": "^2.3.5",
     "r3f-perf": "^7.2.3",
